importers all done

--- a/templates/datamanagement/datamanagement.html
+++ b/templates/datamanagement/datamanagement.html
@@ -51,28 +51,28 @@
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="{% url 'import_demand' %}">
+                        <a class="black-text" href="{% url 'import_availabilities' %}">
                             <i class="material-icons circle amber darken-1 white-text">event</i>
                             <span class="title">Availabilities</span>
                             <p class="grey-text text-darken-3">Import Availabilities from .xlsx file</p>
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="{% url 'import_demand' %}">
+                        <a class="black-text" href="{% url 'import_wishes' %}">
                             <i class="material-icons circle amber darken-1 white-text">event</i>
                             <span class="title">Wishes</span>
                             <p class="grey-text text-darken-3">Import Wishes from .xlsx file</p>
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="{% url 'import_demand' %}">
+                        <a class="black-text" href="{% url 'import_shift_templates' %}">
                             <i class="material-icons circle amber darken-1 white-text">event</i>
                             <span class="title">Shift templates</span>
                             <p class="grey-text text-darken-3">Import Shift templates from .xlsx file</p>
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="{% url 'import_demand' %}">
+                        <a class="black-text" href="{% url 'import_day_templates' %}">
                             <i class="material-icons circle amber darken-1 white-text">event</i>
                             <span class="title">Day templates</span>
                             <p class="grey-text text-darken-3">Import Day templates from .xlsx file</p>
