--- a/templates/datamanagement/import_departments.html
+++ b/templates/datamanagement/import_departments.html
@@ -8,6 +8,7 @@
             <div class="card-content">
                 <div class="card-title light-blue-text text-darken-1">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
+                <p><b>Worksheet "Shifts"</b></p>
                 <table class="striped">
                     <thead>
                         <th>Name</th>
@@ -15,6 +16,14 @@
                     </thead>
                 </table>
                 <p>Datasets where name already exists will be updated</p>
+                <br><p><b>Worksheet "Qualifications"</b></p>
+                <table class="striped">
+                    <thead>
+                        <th>Department</th>
+                        <th>Qualification</th>
+                    </thead>
+                </table>
+                <p>Department is Department Name column, Qualification is Qualification Name column</p>
             </div>
         </div>
 
