--- a/templates/datamanagement/import_users.html
+++ b/templates/datamanagement/import_users.html
@@ -8,6 +8,7 @@
             <div class="card-content">
                 <div class="card-title light-blue-text text-darken-1">Before you start</div>
                 <p>Please structure your data in the following manner:</p>
+                <p><b>Worksheet "Users"</b></p>
                 <table class="striped">
                     <thead>
                         <th>First Name</th>
@@ -36,6 +37,14 @@
                 <p>Address, Zip, City, Telephone, End contract, work hours and holiday are optional parameters</p>
                 <p>Roles available: Admin, Planner and Employee. If no Role is specified, entry will be set to Employee by default</p>
                 <p>Default password will be set to "H4cKm3!fY0uC4n". Users can obtain a password reset by requesting it entering their E-Mail</p>
+                <br><p><b>Worksheet "Qualifications"</b></p>
+                <table class="striped">
+                    <thead>
+                        <th>Username</th>
+                        <th>Qualification</th>
+                    </thead>
+                </table>
+                <p>Username is Users Username column, Qualification is Qualification Name column</p>
             </div>
         </div>
 
