--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="{% static 'js/loadingMaterialize.js' %}"></script>
     {% endblock %}
 </head>
+<body>
     <main>
         {% include 'registration/login.html' %}
 
