--- a/templates/users/employee_list.html
+++ b/templates/users/employee_list.html
@@ -3,7 +3,29 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <h3 class="light-blue-text text-darken-1">Employees ({{ all_entries.count }})</h3>
+        <h3 class="light-blue-text text-darken-1">Employees</h3>
+        <ul class="collapsible">
+            <li {% if search %}class="active"{% endif %}>
+                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
+                <div class="collapsible-body grey lighten-5">
+                    <form method="POST" action="{% url 'employees' %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="input-field col s12 m6">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" required name="keyword" {% if search %}value="{{ data.keyword }}"{% endif %}>
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
+                        {% if search %}
+                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'employees' %}"><i class="material-icons left">clear</i>Clear</a>
+                        {% endif %}
+                    </form>
+                </div>
+            </li>
+        </ul>
+
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
@@ -19,7 +41,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for entry in all_entries %}
+                        {% for entry in page_obj %}
                         <tr>
                             <td>{{ entry.first_name }}<br><b>{{ entry.last_name }}</b></td>
                             <td>
@@ -51,6 +73,27 @@
                 </table>
             </div>
         </div>
+
+        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+        <ul class="pagination center">
+            {% if page_obj.has_previous %}
+                <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
+            {% else %}
+                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
+            {% endif %}
+            {% for page in page_obj.paginator.page_range %}
+                {% if page == page_obj.number %}
+                    <li class="active light-blue darken-1"><a>{{ page_obj.number }}</a></li>
+                {% else %}
+                    <li class="waves-effect"><a href="?page={{ page }}">{{ page }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
+            {% else %}
+                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
+            {% endif %}
+        </ul>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
