--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
                                         <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
                                                 {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>{% endif %}
@@ -112,8 +112,8 @@
                                                 <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
                                             </ul>
                                         </div>
                                     </li>
