--- a/templates/shifts/edit_shift.html
+++ b/templates/shifts/edit_shift.html
@@ -23,12 +23,107 @@
             </div>
         </div>
 
+        <div id="add-employee-modal" class="modal content-section">
+            <div class="modal-content">
+                <h5 class="light-blue-text text-darken-1"><b>Assign Employee to shift</b></h5>
+                <h6 class="light-blue-text text-darken-1"><b>{{ selected_shift.get_start_time|date:"H:i" }} - {{ selected_shift.get_end_time|date:"H:i" }}</b></h6>
+                <table class="striped highlight responsive-table">
+                    <thead class="light-blue-text text-darken-1">
+                        <tr>
+                            <th>Name</th>
+                            <th>Availability<br>Shift wish</th>
+                            <th>Department<br>Qualifications</th>
+                            <th>Assign</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for employee in employees %}
+                            <tr {% if selected_shift.employee.id == employee.id %}class="amber lighten-3"{% endif %}>
+                                <td>
+                                    {{ employee.first_name }}<br><b>{{ employee.last_name }}</b>
+                                </td>
+                                <td>
+                                    <span class="new badge grey lighten-3 black-text z-depth-1" data-badge-caption="">
+                                        <b>Availability</b>
+                                    </span>
+                                    {% if employee.available.get_availability == 0 %}
+                                        <span class="new badge red darken-1 white-text z-depth-1" data-badge-caption="">
+                                            <b>no</b>
+                                            {% if employee.available.note != '' %}: {{ employee.available.note }}{% endif %}
+                                        </span>
+                                    {% elif employee.available.get_availability == 1 %}
+                                        <span class="new badge light-blue darken-1 z-depth-1" data-badge-caption="">
+                                            <b>{{ employee.available.get_preference }}</b>
+                                        </span>
+                                        {% if employee.available.get_start_time %}
+                                            <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                                <b>from {{ employee.available.get_start_time }}</b>
+                                            </span>
+                                        {% endif %}
+                                        {% if employee.available.get_end_time %}
+                                            <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                                <b>until {{ employee.available.get_end_time }}</b>
+                                            </span>
+                                        {% endif %}
+                                    {% endif %}<br>
+                                    <span class="new badge grey lighten-2 black-text z-depth-1" data-badge-caption="">
+                                        <b>Shift wish</b>
+                                    </span>
+                                    {% if employee.wish.get_availability == 0 %}
+                                        <span class="new badge red darken-1 white-text z-depth-1" data-badge-caption="">
+                                            <b>no</b>
+                                            {% if employee.wish.note != '' %}: {{ employee.wish.note }}{% endif %}
+                                        </span>
+                                    {% elif employee.wish.get_availability == 1 %}
+                                        <span class="new badge light-blue darken-1 z-depth-1" data-badge-caption="">
+                                            <b>{{ employee.wish.get_preference }}</b>
+                                        </span>
+                                        {% if employee.wish.get_start_time %}
+                                            <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                                <b>from {{ employee.wish.get_start_time }}</b>
+                                            </span>
+                                        {% endif %}
+                                        {% if employee.wish.get_end_time %}
+                                            <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                                <b>until {{ employee.wish.get_end_time }}</b>
+                                            </span>
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if employee.department == selected_shift.department %}
+                                        <span class="new badge light-green darken-1 white-text z-depth-1" data-badge-caption="">
+                                            <b>{{ employee.department }}</b>
+                                        </span>
+                                    {% else %}
+                                        <span class="new badge red darken-1 white-text z-depth-1" data-badge-caption="">
+                                            <i class="material-icons right">bolt</i>
+                                            <b>{{ employee.department }}</b>
+                                        </span>
+                                    {% endif %}<br>
+                                    {% for qualification in employee.get_qualifications %}
+                                        <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                            <b>{{ qualification.qualification.name }}</b>
+                                        </span>
+                                    {% endfor %}
+                                </td>
+                                <td>
+                                    <a class="waves-effect waves-light btn light-blue darken-1" href="{% url 'assign_employee' selected_shift.id employee.id %}"><i class="material-icons">add</i></a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
         <h3 class="light-blue-text text-darken-1">Edit shift {{ selected_shift_template.name }}</h3>
         <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'shifts' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
         <div class="card">
             <form method="POST" action="{% url 'edit_shift' selected_shift.id %}">
                 {% csrf_token %}
                 <div class="card-content">
+                    <input type="hidden" value="{{ selected_shift.employee.id }}" name="employee">
                     <div class="row">
                         <div class="input-field col s4">
                             <i class="material-icons prefix">event_calendar</i>
@@ -44,16 +139,6 @@
                                 {% endfor %}
                             </select>
                             <label>Department</label>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">person</i>
-                            <select name="employee">
-                                <option value="" selected>None</option>
-                                {% for employee in employees %}
-                                    <option value="{{ employee.id }}" {% if selected_shift.employee.id == employee.id %}selected{% endif %}>{{ employee }}</option>
-                                {% endfor %}
-                            </select>
-                            <label>Employee</label>
                         </div>
                     </div>
                     <div class="row">
@@ -80,6 +165,17 @@
                                 <input type="checkbox" {% if selected_shift.highlight %}checked{% endif %} name="highlight" />
                                 <span>Highlight</span>
                             </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12 m8">
+                            <i class="material-icons prefix">label</i>
+                            <label for="id_employee_display">Employee</label>
+                            <input type="text" name="employee_display" autocapitalize="none" maxlength="30" value="{{ selected_shift.employee }}" disabled id="id_employee_display" class="grey-text text-lighten-1">
+                        </div>
+                        <div class="input-field col s12 m4">
+                            <a data-target="add-employee-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">person_add</i>Assign</a>
+                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'remove_employee' selected_shift.id %}"><i class="material-icons left">person_remove</i>Remove</a>
                         </div>
                     </div>
                     <div class="row">
