--- a/templates/demand/demand_list.html
+++ b/templates/demand/demand_list.html
@@ -70,10 +70,38 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                <br>
-                <img src='data:image/png;base64,{{ timeline }}' style="width: 100%">
             </div>
         </div>
+
+        {% if search %}
+        <div class="card">
+            <div class="card-content">
+                <div class="card-title light-blue-text text-darken-1"><b>Timeline</b></div>
+                <table class="striped highlight responsive-table">
+                    <thead class="light-blue-text text-darken-1">
+                        <tr>
+                            {% for i in range %}
+                                <th>{{ i }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for entry in page_obj %}
+                        <tr>
+                            {% for i in range %}
+                                {% if entry.get_start_hour <= i and entry.get_end_hour > i %}
+                                    <td class="light-blue darken-1 white-text center"><b>{{ entry.staff_count }}</b></td>
+                                {% else %}
+                                    <td {% if forloop.counter|divisibleby:2 %}class="grey lighten-2"{% else %}class="grey lighten-3"{% endif %}></td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        {% endif %}
 
         <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
         <ul class="pagination center">
