--- a/templates/wishes/wish_list.html
+++ b/templates/wishes/wish_list.html
@@ -4,6 +4,42 @@
 {% block content %}
     {% if user.is_authorized %}
         <h3 class="light-blue-text text-darken-1">Shift wishes</h3>
+        <ul class="collapsible">
+            <li {% if search %}class="active"{% endif %}>
+                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
+                <div class="collapsible-body grey lighten-5">
+                    <form method="POST" action="{% url 'wishes' %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">event_calendar</i>
+                                <input id="id_filter_date" name="filter_date" type="text" {% if data.filter_date %}value="{{ data.filter_date }}"{% endif %} class="datepicker grey-text text-darken-4">
+                                <label for="id_filter_date">Filter date</label>
+                            </div>
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">event_calendar</i>
+                                <select name="filter_tendency">
+                                    {% for tendency in form.filter_tendency %}
+                                        <option {% if data.filter_tendency == tendency.data.value %}selected{% endif %} value="{{ tendency.data.value }}">{{ tendency.data.label }}</option>
+                                    {% endfor %}
+                                </select>
+                                <label>Tendency</label>
+                            </div>
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" name="keyword" {% if data.keyword %}value="{{ data.keyword }}"{% endif %}>
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
+                        {% if search %}
+                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'wishes' %}"><i class="material-icons left">clear</i>Clear</a>
+                        {% endif %}
+                    </form>
+                </div>
+            </li>
+        </ul>
+
         <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_wish' %}"><i class="material-icons left">add</i>Create wish</a><br><br>
         <div class="card">
             <div class="card-content">
@@ -21,7 +57,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for entry in all_entries %}
+                        {% for entry in page_obj %}
                         <tr>
                             <td>{{ entry.date|date:"l" }}<br>{{ entry.date }}</td>
                             <td>
@@ -45,6 +81,27 @@
                 </table>
             </div>
         </div>
+
+        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+        <ul class="pagination center">
+            {% if page_obj.has_previous %}
+                <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
+            {% else %}
+                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
+            {% endif %}
+            {% for page in page_obj.paginator.page_range %}
+                {% if page == page_obj.number %}
+                    <li class="active light-blue darken-1"><a>{{ page_obj.number }}</a></li>
+                {% else %}
+                    <li class="waves-effect"><a href="?page={{ page }}">{{ page }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
+            {% else %}
+                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
+            {% endif %}
+        </ul>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
