timeline rendering for day_templates done

--- a/templates/dayTemplates/edit_day_template.html
+++ b/templates/dayTemplates/edit_day_template.html
@@ -145,6 +145,7 @@
                 <div class="row">
                     <a data-target="add-shift-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1 right"><i class="material-icons left">add</i>Assign shift template</a>
                 </div>
+                <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
             </div>
         </div>
     {% else %}
