--- a/templates/dayTemplates/day_template_detail.html
+++ b/templates/dayTemplates/day_template_detail.html
@@ -98,6 +98,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
+                <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
             </div>
         </div>
     {% else %}
