calendar for holidays now implemented

--- a/templates/shifts/shift_list.html
+++ b/templates/shifts/shift_list.html
@@ -90,7 +90,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                {% if search %}
+                {% if search and data.filter_date != '' %}
                     <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
                 {% endif %}
             </div>
