--- a/templates/holidays/holiday_list.html
+++ b/templates/holidays/holiday_list.html
@@ -99,6 +99,9 @@
                         {% endfor %}
                     </tbody>
                 </table>
+                {% if search and data.filter_date != '' %}
+                    <br><img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+                {% endif %}
             </div>
         </div>
 
