--- a/templates/absences/absence_list.html
+++ b/templates/absences/absence_list.html
@@ -115,6 +115,9 @@
                         {% endfor %}
                     </tbody>
                 </table>
+                {% if search and data.filter_date != '' %}
+                    <br><img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+                {% endif %}
             </div>
         </div>
 
