--- a/templates/shifts/own_shifts.html
+++ b/templates/shifts/own_shifts.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}ShiftManager - Shifts{% endblock %}
+{% block title %}ShiftManager - My shifts{% endblock %}
 
 {% block content %}
     {% if user.is_authenticated %}
-        <h3 class="light-blue-text text-darken-1">Shifts</h3>
+        <h3 class="light-blue-text text-darken-1">My shifts</h3>
         <ul class="collapsible">
             <li {% if search %}class="active"{% endif %}>
                 <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
@@ -31,7 +31,7 @@
             </li>
         </ul>
 
-        {% if search %}
+        {% if search and data != None %}
             <div class="card">
                 <div class="card-content">
                     <table class="striped highlight responsive-table">
@@ -74,9 +74,6 @@
                             {% endfor %}
                         </tbody>
                     </table>
-                    {% if search and data.filter_date != '' %}
-                        <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
-                    {% endif %}
                 </div>
             </div>
 
@@ -100,10 +97,12 @@
                     <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
                 {% endif %}
             </ul>
-        {% else %}
+        {% endif %}
+
+        {% if search == False and data == None %}
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Upcoming shifts</b></div>
+                    <div class="card-title light-blue-text text-darken-1"><b>Upcoming shifts</b><br>now - {{ upcoming_shifts.filter_end|date:"l, d.m.Y" }}</div>
                     <table class="striped highlight responsive-table">
                         <thead class="light-blue-text text-darken-1">
                             <tr>
@@ -127,7 +126,7 @@
                                 <td>{{ entry.get_work_hours|date:"H:i" }}<br><span class="grey-text text-darken-1">{{ entry.break_duration|date:"H:i" }}</span></td>
                                 <td>
                                     {% if entry.employee != None and entry.employee.department != entry.department %}
-                                        <span class="new badge red darken-1 z-depth-1" data-badge-caption="">
+                                        <span class="new badge grey darken-1 z-depth-1" data-badge-caption="">
                                             <b>{{ entry.department }}</b>
                                         </span>
                                     {% else %}
@@ -149,7 +148,7 @@
 
             <div class="card">
                 <div class="card-content">
-                    <div class="card-title light-blue-text text-darken-1"><b>Recent shifts</b></div>
+                    <div class="card-title light-blue-text text-darken-1"><b>Recent shifts</b><br>{{ recent_shifts.filter_start|date:"l, d.m.Y" }} - now</div>
                     <table class="striped highlight responsive-table">
                         <thead class="light-blue-text text-darken-1">
                             <tr>
@@ -188,6 +187,39 @@
                                 <td>{{ entry.note }}</td>
                             </tr>
                             {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1"><b>Overview work hours</b></div>
+                    <table class="striped highlight responsive-table">
+                        <thead class="light-blue-text text-darken-1">
+                            <tr>
+                                <th>Calendar week</th>
+                                <th>Start</th>
+                                <th>End</th>
+                                <th>Shift count</th>
+                                <th>Work hours</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for week in weeks %}
+                                <tr>
+                                    <td><b>{{ week.name }}</b></td>
+                                    <td>{{ week.start|date:"d.m.Y" }}</td>
+                                    <td>{{ week.end|date:"d.m.Y" }}</td>
+                                    <td>{{ week.shift_count }} shifts</td>
+                                    <td>{{ week.work_hours }}/{{ user.work_hours }} hours</td>
+                                </tr>
+                            {% endfor %}
+                            <tr class="grey lighten-3">
+                                <td colspan="3"><b>Total</b><br>{{ weeks|length }} weeks</td>
+                                <td>{{ shift_count_total }} shifts</td>
+                                <td>{{ work_hours_total }}/{{ target_hours }} hours</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
