--- a/templates/demand/demand_list.html
+++ b/templates/demand/demand_list.html
@@ -71,7 +71,7 @@
                     </tbody>
                 </table>
                 {% if search %}
-                    <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+                    <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
                 {% endif %}
             </div>
         </div>
