--- a/templates/shifts/shiftplan.html
+++ b/templates/shifts/shiftplan.html
@@ -39,7 +39,7 @@
         {% if search == True and data != None %}
             <div class="card">
                 <div class="card-content">
-                    <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+                    <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
                 </div>
             </div>
         {% endif %}
