--- a/templates/shifts/shift_list.html
+++ b/templates/shifts/shift_list.html
@@ -91,7 +91,7 @@
                     </tbody>
                 </table>
                 {% if search and data.filter_date != '' %}
-                    <br><img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+                    <br><img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
                 {% endif %}
             </div>
         </div>
