--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         {% include 'registration/login.html' %}
 
         <ul id="userwidget" class="dropdown-content">
-            <li><a href="{% url 'own_shifts' %}">My shifts</a></li>
+            <li><a href="{% url 'own_shifts' %}">Dashboard</a></li>
             <li><a href="{% url 'own_availabilities' %}">My general availabilities</a></li>
             <li><a href="{% url 'own_wishes' %}">My shift wishes</a></li>
             <li class="divider"></li>
@@ -112,6 +112,7 @@
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
                                                 <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
